--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="https://s2.wp.com/i/favicon.ico" />
     <link rel='stylesheet' id='h5-font-css' href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600|Merriweather:700,300,700italic,300italic' />
-    <link href="editor.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/editor.css" rel="stylesheet" type="text/css" media="all">
     <link href="//s1.wp.com/i/noticons/noticons.css" rel="stylesheet" type="text/css" media="all">
     <link href="//s1.wp.com/wp-includes/css/dashicons.css" rel="stylesheet" type="text/css" media="all">
     <link href="wpeditor.css" rel="stylesheet" type="text/css" media="all">
